test/files/neg/gadts1.check
gadts1.scala:17: error: type mismatch;
 found   : Test.Term[a(in method f)]
 required: Test.Cell[a(in lazy value TypeArgsPattern1)]
  t match {
    ^
gadts1.scala:20: error: type mismatch;
 found   : Any
 required: Test.Int
    case Cell[a](x: Int) => c.x = 5
                 ^
gadts1.scala:20: error: type mismatch;
 found   : Int(5)
 required: a
    case Cell[a](x: Int) => c.x = 5
                                  ^
three errors found
